--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "EnterpriseTM-Web3.0TM",
+  "name": "enterprise-web3.0-tm",
   "version": "3.0.XP™",
   "description": "Enterprise™ programming language for the Web3.0™",
   "main": "index.js",
   "author": "Juan Lulkin <maiz@lulk.in> (https://medium.com/@joaomilho/)",
-  "license": "ISC",
-  "devDependencies": {
-    "pegjs": "^0.10.0"
-  },
+  "license": "Fuck Off",
   "dependencies": {
+    "pegjs": "^0.10.0",
+    "cli-highlight": "^2.1.4",
+    "colors": "^1.4.0",
     "yargs": "^15.3.1"
+  },
+  "binaries": {
+    "E™": "./E™"
   }
 }
