--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "enterprise-web",
-  "version": "3.0.7-xp-tm",
+  "version": "3.0.8-xp-tm",
   "description": "Enterprise™ programming language for the Web3.0™",
   "main": "index.js",
   "author": "Juan Lulkin <maiz@lulk.in> (https://medium.com/@joaomilho/)",
   "license": "/© This code is property of Enterprise™. ©/",
-  "homepage": "https://https://github.com/joaomilho/Enterprise-Web3.0",
+  "homepage": "https://github.com/joaomilho/Enterprise-Web3.0",
   "repository": {
     "type" : "git",
-    "url" : "https://https://github.com/joaomilho/Enterprise-Web3.0"
+    "url" : "https://github.com/joaomilho/Enterprise-Web3.0"
   },
   "dependencies": {
     "cli-highlight": "^2.1.4",
